RESOLVED FIXED260103
REGRESSION(266850@main): imported/w3c/web-platform-tests/cookie-store/change_eventhandler_for_document_cookie.https.window.html is a consistent failure.
https://bugs.webkit.org/show_bug.cgi?id=260103
Summary REGRESSION(266850@main): imported/w3c/web-platform-tests/cookie-store/change_...
rupin
Reported 2023-08-11 15:29:20 PDT
imported/w3c/web-platform-tests/cookie-store/change_eventhandler_for_document_cookie.https.window.html is flaky
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-18 15:30:13 PDT
Ben Schwartz
Comment 2 2023-10-17 15:39:07 PDT
imported/w3c/web-platform-tests/cookie-store/change_eventhandler_for_document_cookie.https.window.html This test is a consistent text failure on wk2. HISTORY: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcookie-store%2Fchange_eventhandler_for_document_cookie.https.window.html TEXT DIFF: PASS document.cookie set/overwrite/delete observed by CookieStore PASS CookieStore set/overwrite/delete observed by document.cookie FAIL CookieStore agrees with document.cookie on encoding non-ASCII cookies assert_equals: Cookie we wrote using document.cookie in cookie jar expected (string) "DOCUMENT-ðŸª=🔵" but got (undefined) undefined -PASS document.cookie agrees with CookieStore on encoding non-ASCII cookies +FAIL document.cookie agrees with CookieStore on encoding non-ASCII cookies assert_equals: Empty cookie jar after CookieStore delete expected (undefined) undefined but got (string) "DOCUMENT-ðŸª=🔵" DIFF URL: https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/269423@main%20(319)/imported/w3c/web-platform-tests/cookie-store/change_eventhandler_for_document_cookie.https.window-pretty-diff.html REPRODUCIBILITY: I was able to reproduce this issue on macOS Ventura (13.6, 22G120/arm64) ToT using the following command: run-webkit-tests -v --iterations 10 --exit-after-n-failures 1 imported/w3c/web-platform-tests/cookie-store/change_eventhandler_for_document_cookie.https.window.html REGRESSION: The flakiness dashboard indicates a potential regression point at 266850@main. Changes at this point appear to be directly related to this issue and are likely what caused the failure.
Chris Dumez
Comment 3 2023-10-18 10:31:49 PDT
EWS
Comment 4 2023-10-18 22:00:01 PDT
Committed 269503@main (8572ca9d273c): <https://commits.webkit.org/269503@main> Reviewed commits have been landed. Closing PR #19235 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.